fixed spacing and parallax on mobile

--- a/source/styles/components.scss
+++ b/source/styles/components.scss
@@ -145,7 +145,7 @@
   @apply overflow-hidden;
 
   .scroll-item {
-    @apply leading-tight;
+    @apply leading-none;
   }
 }
 
@@ -203,4 +203,8 @@
       @apply text-secondary;
     }
   }
+}
+
+.parallax-bg {
+  transition: background-position 0.3s cubic-bezier(0.1, 0.73, 0.32, 0.89)
 }
